[gd_scene load_steps=6 format=3 uid="uid://k0v8y3q6b8li"]

[ext_resource type="PackedScene" uid="uid://c8epl6vq0bor8" path="res://Personajes/personajes.tscn" id="1_3ja0e"]
[ext_resource type="Script" path="res://Personajes/EnemigoCerdito/enemigo_cerdito.gd" id="2_31ica"]
[ext_resource type="Texture2D" uid="uid://qh4778c8molj" path="res://Assets_PixelAdventure/Enemies/AngryPig/angryPig.png" id="2_slqap"]
[ext_resource type="PackedScene" uid="uid://sqxbpo7m6rht" path="res://Trampas/dmg_player.tscn" id="4_hc4a4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3lgej"]

[node name="EnemigoCerdito" groups=["Enemigos"] instance=ExtResource("1_3ja0e")]
process_mode = 1
collision_layer = 2
collision_mask = 5
script = ExtResource("2_31ica")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("2_slqap")
hframes = 9
vframes = 6
frame = 1

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("RectangleShape2D_3lgej")

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "idle"

[node name="Raycasts" type="Node2D" parent="." index="3"]

[node name="RayCastSuelo" type="RayCast2D" parent="Raycasts" index="0"]
target_position = Vector2(0, 20)
collision_mask = 4

[node name="RayCastMuro" type="RayCast2D" parent="Raycasts" index="1"]
target_position = Vector2(-20, 0)
collision_mask = 4

[node name="RayTimer" type="Timer" parent="Raycasts" index="2"]

[node name="RaycastPlayerDetector" type="RayCast2D" parent="." index="4"]
target_position = Vector2(-50, 0)

[node name="dmgPlayer" parent="." index="5" instance=ExtResource("4_hc4a4")]

[node name="CollisionShape2D" parent="dmgPlayer" index="0"]
position = Vector2(0, 0)

[connection signal="timeout" from="Raycasts/RayTimer" to="." method="_on_ray_timer_timeout"]
[connection signal="heHechoDanio" from="dmgPlayer" to="." method="_on_dmg_player_he_hecho_danio"]

[editable path="dmgPlayer"]
